# Fighter

./: .gitignore  README.md
Server/KFPlugin/: CMakeLists.txt
Server/KFPlugin/KFAchieve/: KFAchieveConfig.cpp  KFAchieveModule.cpp
Server/KFPlugin/KFAttribute/: KFAttributeModule.cpp  KFAttributePlugin.cpp
Server/KFPlugin/KFChat/: KFChatModule.cpp  KFChatModule.hpp  KFChatPlugin.cpp
Server/KFPlugin/KFConfig/: KFAchieveConfig.hpp  KFConditionDefineConfig.hpp  KFConstantConfig.hpp  KFEffectConfig.hpp  KFFootConfig.hpp  KFHeroConfig.hpp  KFItemBagConfig.hpp  KFLoaderConfig.hpp  KFMatchConfig.hpp  KFNameConfig.hpp  KFRelationConfig.hpp
Server/KFPlugin/KFFight/: CMakeLists.txt  KFFight.vcxproj  KFFight.vcxproj.filters  KFFightInterface.h  KFFightModule.cpp  KFFightModule.hpp  KFFightPlugin.cpp  KFFightPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFHero/: KFAttrProbabilityConfig.cpp  KFAttrProbabilityConfig.hpp  KFHero.vcxproj  KFHero.vcxproj.filters  KFHeroConfig.cpp  KFHeroConfig.hpp  KFHeroModule.cpp  KFHeroModule.hpp  KFHeroPlugin.cpp  KFNameConfig.cpp  KFNameConfig.hpp  KFProfessionConfig.cpp  KFProfessionConfig.hpp  KFQualityConfig.cpp  KFQualityConfig.hpp  KFRaceConfig.cpp  KFRaceConfig.hpp
Server/KFPlugin/KFItem/: KFItem.vcxproj  KFItem.vcxproj.filters  KFItemInterface.h  KFItemModule.cpp  KFItemModule.hpp  KFItemPlugin.cpp  KFItemUseInterface.h  KFItemUseModule.cpp  KFItemUseModule.hpp
Server/KFPlugin/KFMatchClient/: CMakeLists.txt  KFMatchClient.vcxproj  KFMatchClient.vcxproj.filters  KFMatchClientInterface.h  KFMatchClientModule.cpp  KFMatchClientModule.hpp  KFMatchClientPlugin.cpp  KFMatchClientPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFMatchShard/: CMakeLists.txt  KFMatchHeroConfig.cpp  KFMatchHeroConfig.hpp  KFMatchJoinRoom.cpp  KFMatchJoinRoom.h  KFMatchNameConfig.cpp  KFMatchNameConfig.hpp  KFMatchPlayer.cpp  KFMatchPlayer.h  KFMatchQueue.cpp  KFMatchQueue.h  KFMatchRandRoom.cpp  KFMatchRandRoom.h  KFMatchRoom.cpp  KFMatchRoom.h  KFMatchShard.vcxproj  KFMatchShard.vcxproj.filters  KFMatchShardConfig.cpp  KFMatchShardConfig.hpp  KFMatchShardInterface.h  KFMatchShardModule.cpp  KFMatchShardModule.hpp  KFMatchShardPlugin.cpp  KFMatchShardPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFReward/: CMakeLists.txt  KFReward.vcxproj  KFRewardConfig.cpp  KFRewardConfig.hpp  KFRewardInterface.h  KFRewardModule.cpp  KFRewardModule.hpp  KFRewardPlugin.cpp  KFRewardPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFRoomClient/: CMakeLists.txt  KFRoomClient.vcxproj  KFRoomClient.vcxproj.filters  KFRoomClientInterface.h  KFRoomClientModule.cpp  KFRoomClientModule.hpp  KFRoomClientPlugin.cpp  KFRoomClientPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFRoomShard/: CMakeLists.txt  KFBattleAllot.cpp  KFBattleAllot.h  KFBattlePlayer.cpp  KFBattlePlayer.h  KFBattleRoom.cpp  KFBattleRoom.h  KFRoomShard.vcxproj  KFRoomShard.vcxproj.filters  KFRoomShardInterface.h  KFRoomShardModule.cpp  KFRoomShardModule.hpp  KFRoomShardPlugin.cpp  KFRoomShardPlugin.hpp  dllmain.cpp
Server/KFPlugin/KFSignIn/: KFSignInConfig.cpp  KFSignInConfig.hpp  KFSignInModule.cpp  KFSignInModule.hpp  KFSignInPlugin.cpp
Server/KFPlugin/KFStore/: KFGoodsConfig.cpp  KFGoodsConfig.hpp  KFGoodsInterface.h  KFGoodsModule.cpp  KFGoodsModule.hpp  KFStore.vcxproj  KFStore.vcxproj.filters  (+10 more)
(+520 files in other folders)
